<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="Settings" >
        <Preference
            android:title="@string/pref_reset"
            android:summary="@string/pref_sum_reset"
            android:key="@string/preference_reset"
            android:icon="@null" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_support" >
        <PreferenceScreen
            android:title="@string/pref_rate"
            android:summary="@string/pref_sum_rate"
            android:icon="@null" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/play_store" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_contact" >
        <PreferenceScreen
            android:title="@string/pref_twitter"
            android:summary="@string/pref_sum_twitter"
            android:icon="@null" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_twitter_url" />
        </PreferenceScreen>
        <Preference
            android:title="@string/pref_email"
            android:summary="@string/pref_sum_email"
            android:key="@string/preference_email"
            android:icon="@null" />
    </PreferenceCategory>

</PreferenceScreen>