<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="4"
                    android:rowCount="3"
                    android:layout_gravity="center_horizontal"
                    android:padding="20dp">

                    <TextView
                        android:text="@string/show_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondary_text"
                        android:layout_columnSpan="4"
                        android:layout_gravity="center_horizontal" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text|textCapWords"
                        android:maxLength="128"
                        android:layout_columnSpan="4"
                        android:layout_gravity="fill_horizontal"
                        android:maxLines="1"
                        android:maxWidth="300dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_general_medium"
                        android:text="@string/season"
                        android:textColor="@color/secondary_text"
                        android:layout_gravity="center" />

                    <ImageView
                        android:id="@+id/season_minus"
                        android:contentDescription="@string/icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:layout_margin="4dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/vc_decrement"
                        android:layout_column="1" />

                    <TextView
                        android:id="@+id/season_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_general_huge"
                        android:text="@string/base"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:layout_column="2" />

                    <ImageView
                        android:id="@+id/season_plus"
                        android:contentDescription="@string/icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:layout_margin="4dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/vc_increment"
                        android:layout_column="3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_general_medium"
                        android:text="@string/episode"
                        android:textColor="@color/secondary_text"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />

                    <ImageView
                        android:id="@+id/episode_minus"
                        android:contentDescription="@string/icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:layout_margin="4dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/vc_decrement" />

                    <TextView
                        android:id="@+id/episode_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_general_huge"
                        android:text="@string/base"
                        android:layout_gravity="center" />

                    <ImageView
                        android:id="@+id/episode_plus"
                        android:contentDescription="@string/icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:layout_margin="4dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/vc_increment" />

                </GridLayout>

                <CheckBox
                    android:id="@+id/end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/season_break"
                    android:layout_gravity="center_horizontal"
                    style="@style/text_general"
                    android:layout_margin="10dp" />

                <TextView
                    android:id="@+id/last_updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_updated"
                    android:layout_gravity="center_horizontal"
                    style="@style/text_general"
                    android:textColor="@color/secondary_text"
                    android:layout_margin="5dp" />

                <TextView
                    android:id="@+id/last_updated_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/text_general"
                    tools:text="Wednesday, April 06, 2016 12:59 pm"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/vc_done" />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>